# riva

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  SECURITY.md  grafana-dashboard.json  install.sh  pyproject.toml  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
.riva/: .gitignore  config.toml
.riva/hooks/: on_agent_detected.sh  on_audit_finding.sh  on_scan_complete.py
.riva/rules/: coding-standards.md  security.md
docs/: scenerio.md  security.md
src/riva/: __init__.py  __main__.py  cli.py
src/riva/agents/: __init__.py  autogen.py  base.py  claude_code.py  claude_desktop.py  cline.py  codex_cli.py  continue_dev.py  crewai.py  cursor.py  gemini_cli.py  github_copilot.py  kiro.py  langgraph.py  openclaw.py  opencode.py  registry.py  strands.py  windsurf.py
src/riva/core/: __init__.py  audit.py  audit_log.py  boundary.py  children.py  env_scanner.py  events.py  forensic.py  hooks.py  launcher.py  monitor.py  network.py  resource_map.py  rules.py  sandbox.py  scanner.py  skills.py  storage.py  tailer.py  usage_stats.py  workspace.py  workspace_init.py
src/riva/hooks/: __init__.py  adapters.py  claude_code_hook.py  claude_code_hooks.json  hook.py  install.py
src/riva/tray/: run.py  (+4 more)
tests/: test_audit.py  test_audit_log.py  test_base.py  test_boundary.py  test_children.py  test_cli.py  test_components.py  test_detectors.py  test_env_scanner.py  test_events.py  test_formatting.py  test_hooks.py  test_ide_detectors.py  test_jsonl.py  test_launcher.py  test_monitor.py  test_network.py  test_otel.py  test_registry.py  test_replay.py  test_rules.py  test_sandbox.py  test_scanner.py  test_skills.py  test_storage.py  test_tray.py  test_usage_stats.py  test_web.py  test_workspace.py
(+25 files in other folders)
