[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riva"
version = "0.2.2"
description = "AI Agent Task Manager - discover and monitor AI coding agents running on your machine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Riva Contributors"},
]
keywords = ["ai", "agent", "monitoring", "observability", "cli", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
    "click>=8.0",
    "flask>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/sarkar-ai-taken/riva"
Repository = "https://github.com/sarkar-ai-taken/riva"
Issues = "https://github.com/sarkar-ai-taken/riva/issues"
Changelog = "https://github.com/sarkar-ai-taken/riva/blob/main/HISTORY.md"

[project.scripts]
riva = "riva.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
riva = ["web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
